--- a/camera-webapp/templates/dashboard.html
+++ b/camera-webapp/templates/dashboard.html
@@ -166,6 +166,6 @@
     </div>
   </div>
 
-  <script src="static/static/scriptz.js"></script>
+  <script src="static/scriptz.js"></script>
 </body>
 </html>
